k8s/development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: thymeleaf
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
         app: test
    spec:
      imagePullSecrets:
         - name: github-secret
      containers:
         - name: test
           image: localhost:5000/host_go:latest
           ports:
              - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: thymeleaf
spec:
#  type: NodePort
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 8080
#      nodePort: 30001
      targetPort: 8080
